--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <p class="nft-content">Our Equilibrium collection promotes balance and calm.</p>
 
-    <div class="nft-price"><img class="nft-icon" src="./images/icon-ethereum.svg" alt="ethereum"/>0.041 ETH <time class="nft-time"><img class="nft-icon" src="./images/icon-clock.svg" alt="clock"/>3 days left</time></div>
+    <div class="nft-price"><img class="nft-icon" src="./images/icon-ethereum.svg" alt="ethereum"/>0.041 ETH <p class="nft-time"><img class="nft-icon" src="./images/icon-clock.svg" alt="clock"/>3 days left</p></div>
 
     <hr class="nft-line">
 
